SDSS-1046: fixup to the loss of spacing in teasers

--- a/docroot/profiles/sdss/sdss_profile/modules/sdss_layout_paragraphs/layouts/one_column/one-column.css
+++ b/docroot/profiles/sdss/sdss_profile/modules/sdss_layout_paragraphs/layouts/one_column/one-column.css
@@ -4,7 +4,6 @@
   grid-gap: 30px;
 }
 
-.layout--layout-paragraphs-one-column .paragraph,
 .layout--layout-paragraphs-one-column .ds-entity--paragraph:not(.ds-entity--stanford-banner) {
   margin: 0 auto;
 }
